# taffy

./: .gitmodules  LICENSE  Makefile  README.md  include.mk  maf_norm.c  maf_to_taf.c  notes.txt  pyproject.toml  setup.py  taf_add_gap_bases.c  taf_add_gap_bases.cpp  taf_annotate.c  taf_coverage.cpp  taf_find.c  taf_find_main.c  taf_index.c  taf_index_main.c  taf_norm.c  taf_sort.c  taf_stats.c  taf_to_maf.c  taf_view.c  taffy_main.cpp
docs/: c_cli_lib_install.md  comparison_stats.md  py_install.md  py_usage.md  taf_format.md  taffy_scripts.md  taffy_utilities.md
examples/: learning_phlyoP.ipynb
impl/: alignment_block.c  line_iterator.c  maf.c  ond.c  taf.c  taf_index.c  tai.c
inc/: line_iterator.h  ond.h  taf.h  taf_index.h  tai.h
pyTaf/: pyTaf_build.py  taf.py  tafTest.py
scripts/: alignment_plot.py  coverage_plot.py  manipulate_tree.py  taffy_alignment_plot.py  tree_to_sort_file.py
taffy/: _taffy_build.py  lib.py  ml.py  newick.py  wiggle.py
tests/: allTests.c  coverage_test.a0.truth.tsv  coverage_test.c  coverage_test.maf  coverage_test.subset.truth.tsv  coverage_test.truth.tsv  dupe_test.maf  dupe_test_truth.maf  evolverMammals.maf.mini  evolverMammals.maf.mini.filtered  evolverMammals.maf.mini.filtered.normalized  evolverMammals.maf.mini.filtered.ref.ignored  evolverMammals.maf.mini.lineage_diffs  evolverMammals.maf.mini.ref_diffs  evolverMammals.maf.mini.sorted  evolverMammals.maf.mini.sorted.padded.dup_filtered  evolverMammals.maf.mini.sorted.ref.ignored  evolverMammals.maf.mini.sorted.stable  evolverMammals.maf.stable  evolverMammals.nh  evolverMammals.wig.mini  (+22 more)
(+100 files in other folders)
